# linmap-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: publish-helm.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  cronjob.yaml  deployment-api.yaml  deployment-bot.yaml  secret.yaml  service-api.yaml
docs/: README.md  components.md  deployment.md  sequence.md
src/: __init__.py  config.py  main.py
src/api/: app.py
src/api/routers/: roadmap.py
src/bot/: api_client.py  cron_job.py  discord_client.py
src/generator/: __init__.py  excel.py  timeline.py
src/linear/: __init__.py  graphql_client.py
src/storage/: __init__.py  base.py  gdrive.py
tests/: test_api.py  test_bot.py  test_generators.py  test_linear.py  test_storage.py
