[tool.poetry]
name = "linmap-bot"
version = "0.1.0"
description = "Automated Roadmap Generator linking Linear, Google Drive, and Discord"
authors = ["Brian <brian@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6"
pydantic-settings = "^2.1"
requests = "^2.31"
pandas = "^2.1"
xlsxwriter = "^3.1"
plotly = ">=5.18,<7.0"
kaleido = "0.2.1"
google-api-python-client = "^2.100"
google-auth = "^2.22"
"discord.py" = "^2.3"
tenacity = "^8.2"
fastapi = "^0.110"
uvicorn = "^0.28"
httpx = "^0.27"
openpyxl = "^3.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
